test/fail/assign-assert-pattern.grace
var name : type { no }

name := object {}
